// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzCard should render card sections horizontally 1`] = `
.recipe-6 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.recipe-4 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="recipe-6 recipe-7"
>
  <div
    className="recipe-4 recipe-5"
  >
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
  </div>
</div>
`;

exports[`EzCard should render with card sections 1`] = `
.recipe-6 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
}

.recipe-4 > *:not(:first-child) {
  border-top: 1px solid #CED4D9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

<div
  className="recipe-6 recipe-7"
>
  <div
    className="recipe-4 recipe-5"
  >
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
  </div>
</div>
`;

exports[`EzCard should render with default styles 1`] = `
.recipe-4 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
}

.recipe-2 > *:not(:first-child) {
  border-top: 1px solid #CED4D9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

<div
  className="recipe-4 recipe-5"
>
  <div
    className="recipe-2 recipe-3"
  >
    <div
      className="recipe-0 recipe-1"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with header and subheader styles 1`] = `
.recipe-12 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
}

.recipe-10 > *:not(:first-child) {
  border-top: 1px solid #CED4D9;
}

.recipe-8 {
  padding: 1.4285714285714286rem;
}

.recipe-8 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-6 {
  margin: 1.4285714285714286rem 1.4285714285714286rem 0;
}

.recipe-0 {
  font-size: 1.2857142857142858rem;
  margin: 0;
}

.recipe-4 {
  margin-top: 0.5714285714285714rem;
}

.recipe-2 {
  color: #8B99A6;
}

<div
  className="recipe-12 recipe-13"
>
  <div
    className="recipe-6 recipe-7"
  >
    <h3
      className="recipe-0 recipe-1"
    >
      Card Heading
    </h3>
    <div
      className="recipe-4 recipe-5"
    >
      <span
        className="recipe-2 recipe-3"
      >
        Card Subheading
      </span>
    </div>
  </div>
  <div
    className="recipe-10 recipe-11"
  >
    <div
      className="recipe-8 recipe-9"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with header styles 1`] = `
.recipe-8 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
}

.recipe-6 > *:not(:first-child) {
  border-top: 1px solid #CED4D9;
}

.recipe-4 {
  padding: 1.4285714285714286rem;
}

.recipe-4 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-2 {
  margin: 1.4285714285714286rem 1.4285714285714286rem 0;
}

.recipe-0 {
  font-size: 1.2857142857142858rem;
  margin: 0;
}

<div
  className="recipe-8 recipe-9"
>
  <div
    className="recipe-2 recipe-3"
  >
    <h3
      className="recipe-0 recipe-1"
    >
      Card Heading
    </h3>
  </div>
  <div
    className="recipe-6 recipe-7"
  >
    <div
      className="recipe-4 recipe-5"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with info accent 1`] = `
.recipe-2 > *:not(:first-child) {
  border-top: 1px solid #CED4D9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-4 {
  background: #FFFFFF;
  border: 1px solid #CED4D9;
  border-radius: 6px;
  border-left: 5px solid #3E90D6;
}

<div
  className="recipe-4 recipe-5"
>
  <div
    className="recipe-2 recipe-3"
  >
    <div
      className="recipe-0 recipe-1"
    >
      <div>
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;
